--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body, html {
 nav {
   width: 100%;
   background-color: #333;
-  padding: 10px 0;
+  padding: 20px 0;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -52,8 +52,13 @@ nav a {
   font-size: 16px;
 }
 
+nav a.active {
+  text-decoration: underline;  /* Keeps the underline on the active link */
+}
+
 nav a:hover {
   text-decoration: underline;
+  color: white;
 }
 
 /* Main content */
